--- a/ak/package.json
+++ b/ak/package.json
@@ -13,11 +13,15 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "chart.js": "^4.4.4",
     "firebase": "^10.13.1",
     "framer-motion": "^11.5.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
