--- a/ak/package.json
+++ b/ak/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ak",
+  "name": "eval2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,25 +14,28 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "chart.js": "^4.4.4",
-    "firebase": "^10.13.1",
-    "framer-motion": "^11.5.4",
+    "firebase": "^10.13.2",
+    "framer-motion": "^11.9.0",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs2": "^1.2.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
+    "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "typescript": "^5.6.2",
     "vite": "^5.4.1"
   }
 }
